新增了backup窗体

--- a/StorageManager/frmStorageMain.resx
+++ b/StorageManager/frmStorageMain.resx
@@ -145,95 +145,114 @@
   <data name="tsrbCrk.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAXnSURBVFhH7ZVrTFNnHMb5sCWKZllcdnHJdInJti/qnDrn
-        lFUUTmspCJQiSAtaQ0VR5sq9CFXBG7rEC7QoKkNEQLlLKUi1FtCqYMSJggilLfQGZosfFtxIfPaeeroQ
-        QWUKH5bsSZ6ck/d9/+/z6/+8Pcftf/3nVG2xuNc4HN/XDth/qrBbsjJ7u45l9HRu2dfbtUCu1b7DLJsc
-        1T22fatyWKsqLX1PagftqHRYcdDYhT2GTsgN7QN7DB256Yb7s5nlEyvVoHWRym7voINdHgngcrqh89IB
-        U8enTNnESNvbO0U1YCsbGf4yAMYZTOnEiG59rd3+23gB5A/vGVJaWuYw5W8v1WPb1hfDxwLIeHQfaW0t
-        kF67Opxw9XIgU/72Iif+2KsAMno6sLP9DpJvNCGh8bLLm5nyt1fNgE3hCq2xW1DVb/oHYN/De5DduoZY
-        TR3itJcmF0D92IEjahWSFFmo6jOiwtYP+c1mSBtqwU9NQWT+aSQ2XZl4gGJbn6JqwOYEOFqvRrIy29mF
-        Clsf0vSNkGrU4KftIACnJgdAYe5Rnuw3osTej2ryq+lwNelIufU5AB0YSyDiJ+sRKPsMh4hBO89iQpnD
-        4jwDFSMAxvAEdqDfIFD2GoZdEDnEBVYzignMWADbG9XD8Y0af6bcKcjlb/6dyDEaZyqNhrsuAJezjY+Q
-        cl03CiBBp7kj0+lmMuVuAzmyb2y58lJrVvwBQyz3zb4VSnPP1pFdoH2stwuyFwDoX0+ukUyZ23Wzeeqj
-        +tIyS0Em+naHwxBDXe6JWfkxMz1+HSefYQJx/EhP57OxAOJpAI36WULTlaPy1mp3psxNr9eH6PVNQ63a
-        WvyqSEV3YkB374/sz5npf6eq27fnXex94DhFwhXERwlAEgGI02mQ1qzFyVs3HGcvXZrLLHez1Qd81H09
-        U992qw6q2mpUVZSgqVCRxEyPXyyWYHpoaExIfNyey7dvtw63dHeiwdSDIsNDKFpv4EJbK5rb7+LmDf2w
-        IGiDZulSH8G8ecJp9it8mUMrgLneH63VMVBVnb6Zd77mE2bb14sO9vYWhvB44oawMOnT6OhUqGrqsH/v
-        UahV9dDptGgkpu/psfLSSrCpICxe7DsUJQrV9tf599s1vjAXfwxjwfSnnaVL1jJbv1okdBqHIwzx9g5v
-        8PQMeyoQREMsToAkMhnnCksRErIVgYGb4OcbjDV+wc77UDKWozyFFSw/eCz3Qf7+QAxcFcBSNZ+Eu9Mu
-        e1biNpWJeLlWr14/l80Or6aDyRW+vhsRERHnBKB9MFNJQBIhS07HzrSdTsuS0hFJxmK2JWHpd1xEiXzR
-        rQqCvYGCuWgG2nPfR6LYq3EpS/IVEzO2Fi6UvEtCi+lgl4ODo7Fx4/PwDRviIZWm48L5cpSWFKG48IzT
-        zvui8+AHrsdKFhe1OQEY1PHRV/4FTAVTcCL5a3A4IlCUsIDFYr38hcThhM8hbTeOBKDbSwe7OhAZmQRl
-        9gkUnT2DcwX5ThcXFpAzkAkPDz+kbvWDRSOATc2CufA93Mz+EEJ+ALypCNB70xlM3Gix2WEenp6hf4wE
-        4HAi4O8vgVC4nelCAmJjd+FM3mlneBFx3slcBPEjwGNzoS8MxKDWH+YLs2A6645jScvhwwvDqlVr8Xzv
-        MA8mbrQoSsRjs0P+GgngMjkb4POjEB4eSx5JIg5lHnZ2gXZyYiqWLePh5x0iDDaJYLm4mBy6qXhQvAjN
-        2hqUllWSsyTCihXhf9IZTNxokcltY4WPtI+PGPS/InpLCk7lnoQiKwu+vHVgsfi4cDweT9pSYK1Zgq78
-        DyDb5IVAvgQBAWLS/nXOeoqKkDBxo0UWyCgqtJ9cTa+zn98GU7J0t2nLZqmJxQoxcblCs640cej3lhjy
-        /NcMndnLNXM4oSZvKtRE9mTqhGY2WyRi4kaLojbO4HLXzfbyEs0ajwUCySweTzKLotZ/JhaLv7xWsqnF
-        VB9stGr4QpFIMmYN/XJj4iZWWXLB9F1R8w//Il/wAzM0Drm5/Q3wIBqxQOS9lwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAXlSURBVFhH7ZVrTFNnHMb7YUsUzbK4bM4lwyUm276oc7o5
+        p6yLwmktBYFSpNKC1FBRkG0gtyJUBW+oiVNsUUAniIDc5FKuxVpQq4JRJyoi9Aa9gdnih0U3Ep+9p54u
+        RFCZwocle5In5+R93//7/M6/b89h/a//nGqtVo96p/PbhiHHT9UOa062sfdIVn/P5j3G3kUKrfYtZtnU
+        qOmh/Wu101ZTOTDwqGHYgXNOG/aberHL0AOFoXtol+FeXqbhzlxm+eRKPWxbonY47tHBbo8GcDvT0NOy
+        z3zvI6ZscqQ1Gqeph+yVo8NfBMA4iymdHNGtb3A4fpsogOL+bUNaZ+c8pvzNpX5oj30+fDyArAd3kHGz
+        E3GXLowkXWgLYsrfXOTEH3kZQFb/PWzvvoHUKx1Iam9zexNT/uaqH7Ir3aH1DitqBs3/AOy5fxvya5eQ
+        oGnCVm3L1AI0PnTi50Y1UpQ5qBkwodo+CMXVi4hvbYAgPQ1Rp04gueP85AOU2geUNUN2F8Dh5kakqo66
+        ulBtH0CGvh3xmkYIMrYRgIKpAVBa+lX5gyaUOQZRS56aDm8kHamyPQOgAxMIROJU/QSqAcMBYtA+aTWj
+        0ml1nYHqUQDjeBI7MGgQqoyGETdELnGRzYJSAjMeQGx73UhiuyaAKXcJCsXrfydyTaY5KpPhlhvA7aOm
+        B0i7rBsDkKTT3JDrdHOYctZQrvxLe56iwpaTuM+QwHu9b4XK0h87ugu0jxh7IX8OgH56co1iyliXLZbp
+        D5orKq1F2RjYGQ5DHNXWH7dyNjM9cR0jn2ECcezg/e6n4wEk0gBNdU+TOs4fVnTVejBlLL1eH6rXdzzu
+        0jbgV2U6+pID+4w/cD5hpv+daq5fX1BnvOssIOFK4sMEIIUAbNVpkHFRi/xrV5ynW1rmM8tZ9ubAD/ou
+        Z+tvXmuCuqEWNdVl6ChWpjDTExebLZwpEsWFJm7d1Xb9etdIZ18PWs39KDHch7LrCspvduFi9y1cvaIf
+        EQZHapYt8xUuWCCe4TgvkDu1QliaA9BVGwd1zYmrJ8/Wf8hs+2rRwT4+4lA+X9oaFhb/JCYmHer6Juzd
+        fRiN6mbodFq0E9P39FhVxTlwqGAsWuT3OFoi0g42BQw6NH6wlM6GqWjmk56KpWuZrV8uEjqDyxWH+viE
+        t3p5hT0RCmMglSZBFpWKM8UVCA2NRVDQRvj7hWCNf4jrXkTGclUF+J7tD68Vvji1NwhDF4Sw1iwk4R60
+        K5+WsaYzES/W6tXr53M44bV0MLnCz28DIiK2ugBo789WEZBkyFMzsT1ju8vylExEkbG4LSlY9g0P0RI/
+        9KmD4WilYCmZhe68d5Es9W5fxpZ9zsSMr8WLZW+T0FI62O2QkBhs2PAsPDIyEfHxmSg/W4WKshKUFhe6
+        7LovOQtB0HqsZPPQkBuIYZ0AA1Wfwlw0DcdTvwCXKwFFiYvYbPaLX0hcbvg80nbTaAC6vXSwuwNRUSlQ
+        HT2OktOFOFN0yuXS4iJyBrLh5eWP9Fh/WDVC2BvZsBS/g6tH34dYEAgfKgL03nQGEzdWHE6YF5st+mM0
+        AJcbgYAAGcTiH5kuJCEhYQcKT55whZcQn8zPQ7AgAnwOD/riIAxrA2Ap94T5tAeOpKyALz8Mq1atxbO9
+        w7yYuLGiKAmfwwn+azSA2+RsQCCIRnh4AvlJknEg+5CrC7RTk9OxfDkfB7dJMNwhgbXuK3LopuNu6RJc
+        1NajovIcOUsSAhD+J53BxI0VmdwyXvho+/pKQf8rYjanoSAvH8qcHPjx15HNBSg/lohHN9Ngq1+K3lPv
+        Qb7RG0ECGQIDpaT961z1FBUhY+LGiiyQU5RokFzNr7K/f6Q5NX6nefOmeDObHWrm8cQWXUXC498742Cv
+        W/O4cDfPwuWKzD6UyEz2ZOrEFg5HImHixoqiNszi8dbN9faWeE7EQqHMk8+XeVLU+o+lUulnl8o2dpqb
+        Q0w2jUAskcjGraFfbkzc5CpHIZy5I3rhoV8Ui75jhiYgFutv1U4aVpirbuAAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="tsrbInfocx.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAW5SURBVFhH7ZZ7TFNnGMbZLVmmy5Jl/2zJ9A/317ItWdxM
-        nJoioaUIHBA4iNwvghOcYLnD4GDLRVE3BKQyUAIUKONSQModCxXp5KJs6kCU0nJt0ZiYzHgh89l3yqlB
-        V50KZlmyJ3ly0vZ7v+d33u89ObX6X/85Nc7MvNNkNH7TPG/YrzDM5GVNjOWmjY+GZU6MfcmoVG9yy16N
-        Wm/ObVAaZxsU01O3m28YUG+cxWHdGNK1o2C0l+fTtSOFEu2VtdzylZXyxuxXSoNhhA02eymA2RLtaPsh
-        /chHXNnKSDUx8bZyfq52afjTADincaUrI7b1zQbDrecFYK5e0iYNDKzjypcv5c25vU+GWwJIu3YFKcMD
-        2H+ueyG2u8uVK1++yMTnPgsgbXwEqZcvIuGXs4hVd5m9hytfvprm5/LNoU2GGTRM6x8BZF69hMT+c4jq
-        bEW0qv3VArTcNOJYixLx+XlomNJBMTcN5nwvRB3NcEtOQkjJKcSdPbPyAPK5qfyG+TkTQE5bCxKkx01d
-        UMxNIUWjhqizBW4p3xOAk68GIH9yXFo0rUOVYRqN5K7Z8BbSkbrZRQA2MIpAxLyqI5BOaY8Qg3XxjB61
-        xhnTDCiWAFjwCnZgWktLJ7QLZogTxGWzk5ATGEsAEaqu+zHqDkeufPk6odN9KNVpfzUDmH1cdw1JfT2P
-        hSepu8F0dN6S1LfGS0prbZjyxg+4bZYn6eT43qVdYJ07MYZEDiBBrUJmjwbZPUPIUWnuZ5S33BHL5HcO
-        yOoGxGV1HgzDvM5t9XIqIK9hAlGQfX3k4ZMA8eozyOrpZ4P/PNYzWJLTfcE+vaqZlypTBItLFYNiWe1t
-        sUwRwG318moYGvri9MTvxpMkPJ84hwAkEIC0nj7kq4ch7+83lra1fcYtN4kpaVwjLlN0M6XVk0xZ/afc
-        1y8mHo9evXPnPs+Y6PSuoaHBhYHro+jQj0OuvYrcAdJ29SDkmmFoNJoF2j2wc/NGB5rHC1vNlVtJyuoE
-        jKz2D0l53Ys9GWwwn+/j6egY1OHtLboXHp4MZVMrDmbkoEXZBnWPCsozKpw4O4yDhVWoq1bATuCODV87
-        3bW19WoXCn1pUr/qUG/vu+LSmovkOH7itn622CKh0MeTz/frsLb2vkfT4QgKikVoSAIqymvg6bkXrq67
-        QTnS8PDfjezOfiT9WAzp8UJY8yhs3uQAm6007Ox23LWz82un3MMDmZKa31LLagu4iKfL3j7gc1LUyAaT
-        K5ycguHvH20CYH04S0pA4pCYIEFqCgNJWgaOt/fhSE07IiOTsGnjNhPAls1O4PO9IBD4wtkz6gFTIHuY
-        fKpKxMVY1vr1oW+RUDkbbLaHRziCgxfDAwNjIBJJUP1zHWqqKiEvLzW56HQb8rovICQu3RS+aaO9yVut
-        3eDkEgpRVgGSCspB+0bJeFa8p/9xFQr91pG265YCsK1mg80dCAmJJ63+CZWyUlSUlZgsqyhHbpMKR1s1
-        2HdICnf/CFAeIfAKjUX0D0UQl9cjPq8YLi6BeoHA/RMu7u+ys/PeYm29885SAKHQnxSGwscnkutCLKKi
-        DqC0+JQpvFJWguLCQgTsikQEudOjrX2mmUiTNyG9ogEZJdWIycpF8P4Yss92cqROhTRNv8dFPi5yXo5k
-        cB4sBTCbzAbc3L6Fn18UOZI4HMnKNnWBdUJcMraQ1vN4LnDziUBQVCaCRQyqle3o1ZxHZWUV3N1pOFMU
-        nJ2dH1IUVWARggB8Zyl8qR0cgsA+FeFhSThZWIT8vDw4OXrBmpw3n+9tGjoB3wc2NjS2bw8kwbvINYh0
-        cgcoajsLYHYWgXiDi14UCUgUCHZOk6v+n0xRgfoEkVgftkek5/E8La4hez0y+5nP99BRlMttDqCHz+ev
-        4qIXJRAEv79tm9daW1vfNc9jmg5d4+gYavE3SxYIAj6mKFdbEp5NZkFIIl9bTP7XZGX1F3Oo+jJ8W62w
-        AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAW7SURBVFhH7ZZ7TFNnGMbZLVmmy5Jl/2zJ9A/317ItcS5L
+        nJgqoaVKOYL0MATkKjjBC5Zr6fRoy0URN+VWGSoDWijjUkDKXUsryuSibupAHKWVSwsaE5MZb5nPvlNO
+        TXXVqWCWJXuSJydtv/d7fuf93pNTt//1n1PjxMRbTVNTXzVP27ZrbRP52aPDeekjQ7FZo8OLGb3+dW7Z
+        y1HrdeuXuqnJhtqxsZvN12yon5rEPvMwMkxDYEwXpzNMg8UK06WF3PK5le7a5Bc6m22QDXbYGcBhhWmo
+        fa9l8AOubG6kHx19UzdtrXUOfxIA53SudG7Etr7ZZrvxrADM5QsmWV/fIq589tJdt25+PNwVQPqVS9h5
+        vg9bTnXdT+46vpYrn73IxOc9DSB9ZBC7Lp6D9OeTSDYed3gTVz57NU1bCx2hTbYJNIxbHgJkXb6AtN5T
+        SOhsRaK+/eUCtFyfwsEWHVIL89EwZobWOg7mTDckHc3w3yFDdOlRpJw8MfcAGutYYcO01Q6Q29YCqbLA
+        3gWtdQw7e4yQdLbAf+e3BODIywEovDqiPDxuRpVtHI3krtnwFtKRuskZADYwgUAkvawjUI6ZcojBumTC
+        gtqpCfsMaJ0AXHgOOzBuopWjpvsOiEPE5ZNXoSEwrgDi9MfvJhk7RFz57HXIbH5faTb94gBwuMB8BbLT
+        hkfCZcYuMB0dNxT1ramKsloPRt34HrfN7KS8OrLZuQus80aHkcYBSI16ZBl6cMAwgFz9ybuZ6pZbcpX6
+        1m5VXZ+8vC6AYZhXua1eTEXkNUwginKGLjx4HCDVeALZhl42+M+Dhv7S3K6zqzKqmnm7VNooeZm2X66q
+        vSlXacO5rV5cDQMDnx0b/W3qCAkvJM4lAFICkG44jULjeWh6e6fK2to+4ZbbxZQ2LpCXa7uYsuqrTHn9
+        x9zXzycej56/bt3WwKTEjOMDA/33+34fQodlBBrTZeT1kbYb+6HpOY+enp77tDii032pN83jxc7nyt0U
+        5XUCRlX7h0Jd93xPBhvM54cEikSRHcHBkjtxcTuga2rFnsxctOjaYDTooTuhx6GT57GnuAp11Vp4CcT4
+        fLHPbU/PoHahcD1N6uft7e5+W15Wc44cxw/c1k8XWyQUhgTy+aEd7u7Bd2g6DpGRyYiJlqJCXYPAwM1Y
+        u3YjKBGNgLCNONDZC9n3JVAWFGMFj4L7Mm94rKTh5eV/28srtJ0Sx0UwpTW/7iqvLeIinqxVq8I/JUWN
+        bDC5wscnCmFhiXYA1vuylQQkBWlSBXbtZKBIz0RB+2nk1LQjPl6GZUtX2wGWu/uAzw+CQLAeInHCPabg
+        xwc7jlZJuBjXWrIk5g0SqmGDHQ4IiENU1Ex4REQSJBIFqn+qQ01VJTTqMrsPH2tDftdZRKdk2MOXLV1l
+        98oV/vDxjYEkuwiyIjXo9QkqnhvvyX9chcLQRaTtZmcAttVssKMD0dGppNU/oFJVhoryUrtVFWrkNemx
+        v7UHW/cqIQ7bBiogGkExyUj87jDk6nqk5pfA1zfCIhCIP+Li/i4vr+DlPN66W84AQmEYKYxBSEg814Vk
+        JCTsRlnJUXt4paoUJcXFCN8Qj23kTve3nrbPRLqmCRkVDcgsrUZSdh6itieRffzIkfoU0zT9Dhf5qMh5
+        icjg3HMGcJjMBvz9v0FoaAI5khTkZB+wd4G1NGUHlpPW83i+8A/ZhsiELERJGFTr2tHdcwaVlVUQi2ms
+        oSisWbPmAUVRRS4hCMAWV+HO9vaOBPtUxMXKcKT4MArz8+EjCsIKct58frB96AT8EHh40PDziyDBG8g1
+        knTya1CUHwvgcDaBeI2LnhEJSBMI1o2Tq+WfTFERFqlEbondJLHweIEu15C9Hpr9zOcHmCnK9yYHYODz
+        +fO46BkJBFHvrl4dtNDTc/2CZzFNxywQiWJc/ubKAkH4hxS11pOEHyCzICSRr8wk/2tyc/sLfbD53jlx
+        QkMAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="tsrbBym.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAXtSURBVFhH7ZZdTFNnGMfNPpLF7cZtF3MXOuOWXSwzbppd
-        LFm4QFpAQISAyKfCYBPQuPJZ0KK2ygSMtWAL5bvyUShQWvpFT8vpaXXqAHVTA+IorRTaoi7ZkiUqkWfv
-        ezjVutVNA1ws2T/55z1tz3v+v/d5n3NOV/2v/5zUMzOrNV7vl7o5z3dKz0xNxdREtWByPLt8auKzMpJ8
-        jTltZWS45/5C651Vqd2u33R3PdDvnYVKxwQct4/DUfuNueP2sXq+/eZ65vTllfbu7FatxzOGg332B/CZ
-        bx83nnSOvc9MWx6RU1NvaOfcvf7hzwNgLGCmLo9w6XUez68vClB267q9dHh4IzN96dLec+f+NTwQgOD2
-        TeBdG4b8C5b5Qos5hpm+dKGOr/4nAMHkGBy5cRW4l2xQaDX7vI+ZvnRp5txiX6jGMwMql/MJQPmt61Dy
-        4wXIMxkgnzSuLID+nhfO6LVQLK4B1bQDlG4XlF0+DxxCB7GHSyGztQmKbEPLDyB3T4tVc24aQDSoB67k
-        LF0FpXsaeBetwDHpIZZ3CAE0rgyA+M6kpMHlgC6PC9BDiA7Xo4r0zS4C4MA8BFGwUlsgmbZXIQN284wT
-        er0zdA8o/QACeBkr4LLHSabs8z6IWuRzs3dAjmACAXCsg/MFVlM0M33pqnU41koc9p98AD6fddyG0h+o
-        Z8ILFn3lIEWttViMH5nN5uV5IEnuTOb6VwG7emoCSvwAuMhC5CorwQGAVywWUz9FEX3d3d2vkiT5ocVi
-        jhsZUa9mLvlyqkOvYQRRh0IXAgHglR8aGlzQkKbHNovpPEka60hy8D4a71sshBSNlynKdIUgiHeYS768
-        VKOjmwamxryNKFyMLEIAxQigiDLBUXT7tQ1f/H2IHPIa9Gro65ODQtFGGx8bDGpAIBdRJd5DfvelKhEU
-        FPfW7t0HEgryj5tHR0fmh38ZB8I5CZ32WyAeuQRd6GFkPE8CZTUvaAZ6H3d2tkBHRzPI5a208TH+Tq3u
-        fYQgLiFfQ9sRxVz++cLBISHJCRER6URSEudBTs5h0GoM8P0JEei1g0BRJFgpC2gGdKDoVtCrxEFyuQx0
-        un4YGhqkjY8xCP7NYBhAlTBZUHM+/48LCn0zNDQ5ISQklQgOTnoQF5cD6emFkJXJhY72HkhIyIWYmG8g
-        KjIedkTFw674HDh9Wgz9/V30anGgCb0bhEIJiES1QBAG0GqV0N7eBEqlHAEYK3CTMnHPKixsz6dsdqoa
-        B6MRIiMzIC0tnwbArqyQIJAiKOHy4QivDATHBNDSIkMBanq/8Urxqk9VCYHFSoKwsDSorW1AEFpoba2n
-        z8HNie8O1JSfM7GL2rIl63UUKsfBPsej1WVkLIbv3VsAHA4flbsPero6obNNhsYOMA5qUajhWYBTQtgW
-        vAsB7EEAjYAbU3i6gt6exTvD1GO1mjYx0YsKDU3diMru8AfApcbBvgpkZhaD5KyUDu84hxqMsWZASXc7
-        3gJcboLQg0QspcMJtB0yWSOU8bioWvWod4wnA24Bm530VXBw4h/+AKGhaRAdnQXJyQeZKhRCXt5RkDU3
-        PQnvlrfTVTAaNXSj4b3ukp+jGw4bh/OP8RBACTQ3ScFsNlgpitrAxD4Vi5USwWYnPvIH8BmXMjb2W0hN
-        zUNbUgRVFUK6Cu2yFmiQStHK26GtrQ1UKgUNUS06BQJ+GfD5POAd5tLhVVUnF1qa63/WaVVXrVYigol9
-        KgSwP1C4v7dvTwd8V+Rkl0JjfQOIq2sgNiYNwsOTYefOTATSSVeiR9EOVZXlNERlxQmQ1olRD4ggJeVA
-        ts1mW6NWB3gQoYASFivRhUbnvzkqaq+Tm3fMmb2P4wwKSnCGhOx2RkdnuHp7ex/K5XKvSFTj7OtTPJTW
-        1T4sLeU7RWdE3jNC0aPExNw9TNzfxWJlvB0enrh+27aUdS/iuLisdRERWU8+799fupEkDdE1NdLNkZFf
-        bzAadQM9PV39bHbaBwJBxebW1qYdxcXla5i4lZfNZv7EbNZ/zHwMoFWr/gQ8fqgwmA4SvgAAAABJRU5E
-        rkJggg==
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAXxSURBVFhH7ZZrTFNnGMfNLsni9sVtH+Y+6Ixb9mGZcZfs
+        w5KlHyYtICBCQJCbwmAT0Lgil4IWtUWUy+gKtFDuyKXcWlp62tLTcnrRqQPUzQuIo7RyaYu6ZEuWqESe
+        ve/hVOtWNw3wYcn+yT/vaXve8/+9z/ucc7rmf/3npJ6dXavxeD7Xzru/Vbpnq0qmJiqFk+PpxVMTHxVS
+        1EvMaasj/R3XZ4RnTqWYnv5Ne9sN/Z45KHVMQJF9HArtV+eL7GN1Avu1jczpKyvi9tynhNs9hoO99gXw
+        WmAfN5xyjr3NTFsZUVNTrxDzrj7f8KcBMBYyU1dGuPRat/vXZwUovHHFXjA8vJmZvnwRd1yZfw33ByC8
+        eQ34l4fh4FnzQo7ZFMFMX75Qx1f+E4BwcgyOXr0EvPM2yLGavN7HTF++NPMuiTdU454F1YzzEUDxjSuQ
+        /+NZyDLq4RBlWF0A3R0PfK8jIE9SBappByhdM1B44QxwSS1EHimA1JZGyLUNrTyA3DUtUc27aADxoA54
+        0mq6CkrXNPDPWYFr1EEk/zACaFgdAMmtSWn9jAO63DOgRqvG4TpUEcXcEgAOzEIQ2au1BdJpexkyYDfN
+        OqHPM0v3gNIHwI9XsAIz9ijplH3BC1GDfHruFsgRjD+AA1ZiIdtqDGemL181Dsd6qcP+kxfA62rHTSj4
+        wfJEePaSLx60WNabzYb3TCbTyjyQpLcmM32rgF05NQH5PgA8ZBFymZXkAsALZrOx32IhFd3d3S9SFPWu
+        2WyKGhlRr2Uu+XyqRa9hBFFbcfP6oj8AvPLDBmJRQxkf2szGMxRlqKWowbtovGs2kzI0XrBYjBdJknyD
+        ueTzSzU6umVg6rqnAYVLkMUIIA8B5FqMcAzdfm3D534fooY8ep0aFAo59PS00cbHer0aEMg5VIm3kN98
+        rkqwWFGvxcYeiMk+VGQaHR1ZGP5lHEjnJHTab4Bk5Dx0oYeR4QwFpqHBRc1A38POzmbo6GgCubyFNj7G
+        36nVfQ8QxHnky2g7wpjLP104OCAgPiYkJJmMi+Pey8g4AoRGDydPiEFHDILFQoHVYgbNgBZ6unvoVeIg
+        ubwVtNp+GBoapI2PMQj+Ta8fQJUwmlFzPv2PCwp9NTAwPiYgIJFkseLuRUVlQHJyDqSl8qCjvRdiYjIh
+        IuJrCAuNhh1h0bArOgMqKiTQ399FrxYHGtG7QSSSglhcAySpB4JQQnt7IyiVcgRgKMFNysQ9qaCgPR9y
+        OIlqHIxGCA1NgaSkQzQAdmmJFIHkQj5PAEf5hSA8LoTm5lYUoKb3G68Ur7q8TARsdhwEBSVBTU09giCg
+        paWOPgc3J747UFN+zMQu6ZNP0l5GoXIc7HU0Wl1KylL43r3ZwOUKULkV0NvVCZ1trWjsAMMggUL1TwKU
+        i2Dbl7sQwB4E0AC4MUUVJfT2LN0Zxl6r1biFiV5SYGDiZlR2hy8ALjUO9lYgNTUPpNUyOrzjNGowxpoB
+        Jd3teAtwuUlSB1KJjA4n0Xa0tjZAIZ+HqlWHesdwyu8WcDhxX7BYsX/4AgQGJkF4eBrExx9kqpADWVnH
+        oLWp8VF4t7ydroLBoKEbDe91l/w03XDYOFxwnI8A8qGpUQYmk95qsVg2MbGPxWYnhHA40Q98AbzGpYyM
+        /AYSE7PQluRCWYmIrkJ7azPUy2Ro5e3Q1tYGKlUPDVEpLgehoBAEAj7wj/Do8JMnixabm+p+1hKqS1Yr
+        GcLEPhYC2O8v3NfbtycDvisy0gugoa4eJJVVEBmRBMHB8bBzZyoC6aQr0dvTDmWlxTREackJkNVKUA+I
+        ISHhQLrNZlunVvt5EKGAfDY7dgaNzn9zWNheJ4973Jm+j+tksWKcAQGxzvDwlJm+vr77crncIxZXORWK
+        nvuS6qr7BQUCp0gk8pSXffdg9+7MPUzc38Vmp7weHLx747ZtCRuexVFRaRtCQtIefd6/v2AzRenDq6pk
+        W0NDv9pkMGgHenu7+jmcpHeEwpKtLS2NO/Lyitcxcasvm830gcmke5/56Edr1vwJtDOnsFx6DcEAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="tsrbBackup.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAMISURBVFhHzZdZqE1RGMe3eZ7KHMoDGUoyRfKgxIMMGR94
+        kOHB8KIkkaE8SIiMIWUeIkLiyVyiyDxnJiTeRfx+655T5+yz91Hu3bf7r9/tfLtz1n+vtb71re9GNVW9
+        YRHshF2VxDEcqyf8U3VgNryG53AUHGT3f+Jvj8ELeAUzQY9UTYHvsAE6QS2orByjM2wDxx4PiWoOV+Ew
+        NPRBFasxnICL0NQHcQ2ArzA2RMlqAnUrPpaoH2yFHbAR5kFHKNQE0KN/iGJy+T9CWrL0gvMwOkSlmgt/
+        cpg/N2EYFMrk1mNiiGJaAI+hbYiK1QiOwwNIe8Gl8B5ewl5oA/GEaw/PYH6IYloDlyBp/0fBNxgXomSZ
+        8eaQK/EZBkNcTsTvrA5RgczUI7A/RKVaD7ehZYiS5QpsAmf5EBZDXPocggMhKpAZeg1WhahUnul9FR9T
+        ZYI2A5f9LFiAkuRxvAJFK90BTBwzN0m+QNrqxOUpKfcCVsWnUJRrfeATpO3xOrgDrUJUXu3gCSRtgZoM
+        H6BHiHIyyUwca0GSRoJJOClE5WUp/wJJSaiGgLVgeIhymgPWf0tmkhrAQXgEfX2QIouRx2w7pBWsrvAO
+        ZoQopyVg4TCJ0tQNboH7Nw1aQ20w6Vz2WaD5OYhXwEK5jW7nwhDlZMKcgrI3FeoOngaX0KJkbT8JFjCf
+        OfNy5qoeXIDNIUIurw/Ssjau+mCJXQb5+94VdG/Tlj2uPXAawvctmXdhhUE1yarrlrcw8Di8gelgqeyS
+        MXqY9DYoJmQ0Ajxidj/XwQzNEj3MG4/qUAjn9jeYRHZCVkNvqyxwbO8LvX7CVAjZ6NuMMagm2fTo6ctE
+        b8FOJivZ6lmWvU80zveZW0Dv0MGkXUJVIc29Zy6DhoNA6al3+GMTkZWcuebeIz/A06byLVz0C4rKYhXL
+        ZXfmmttzeBSVnnpHN+AMZNGKK/fcZXfmeXO99NQ73M9m5FqwKmYtGxG99NQ7XECeURPlHtj5VObfsTQc
+        07Hvg156Fl1+A2El+MUsWQ561QRF0V+v/+vtkFWnUwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="tsrbExit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -1395,6 +1414,9 @@
   </data>
   <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>982, 26</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>83</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
